peac_dev/force-app/main/default/objects/Insurance__c/fields/Account_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Apply at Account Level?</label>
    <type>Checkbox</type>
</CustomField>