peac_dev/force-app/main/default/objects/Insurance__c/fields/Cancel_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Cancel Date</label>
    <type>Date</type>
</CustomField>