peac_dev/force-app/main/default/objects/Insurance__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Carrier Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>