peac_dev/force-app/main/default/objects/Insurance__c/fields/Infolease_Environment__c.field-meta.xml
<CustomField>
    <fullName>Infolease_Environment__c</fullName>
    <label>Infolease Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>