peac_dev/force-app/main/default/objects/Insurance__c/fields/Insurance_Agent__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Select a Contact related to the Carrier</inlineHelpText>
    <label>Insurance Agent</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurance (Agent)</relationshipLabel>
    <relationshipName>Agent_Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>