peac_dev/force-app/main/default/objects/Insurance__c/fields/Insurance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Insurance (Contact)</relationshipLabel>
    <relationshipName>Insurance</relationshipName>
    <type>Lookup</type>
</CustomField>