peac_dev/force-app/main/default/objects/Insurance__c/fields/Insurance_Id__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>Insurance Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>