peac_dev/force-app/main/default/objects/Insurance__c/fields/Insurance_Type__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Type__c</fullName>
    <label>Insurance Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Property</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>Business Auto</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Extended Coverage</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Additional equipment</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>