peac_dev/force-app/main/default/objects/Insurance__c/fields/Policy_Status__c.field-meta.xml
<CustomField>
    <fullName>Policy_Status__c</fullName>
    <label>Policy Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Infolease_Environment__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>01</fullName>
                <label>Marlin Business Bank</label>
            </value>
            <value>
                <fullName>00</fullName>
                <label>Marlin Leasing Corp</label>
            </value>
            <value>
                <fullName>02</fullName>
                <label>PEAC</label>
            </value>
            <value>
                <fullName>05</fullName>
                <label>Outside Coverage</label>
            </value>
            <value>
                <fullName>06</fullName>
                <label>Marlin Program</label>
            </value>
            <value>
                <fullName>07</fullName>
                <label>Reinstated</label>
            </value>
            <value>
                <fullName>08</fullName>
                <label>Voided - No Coverage</label>
            </value>
            <value>
                <fullName>09</fullName>
                <label>Non-Solicitable</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Cancel Non Payment</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Disposed</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Self Insured</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Pending Auto</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Outside Ins Auto</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>TV In-House</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>TV Reinstated</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Canceled - Delinquent</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>TV Disposed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>