peac_dev/force-app/main/default/objects/Insurance__c/fields/Property_Damage_Coverage__c.field-meta.xml
<CustomField>
    <fullName>Property_Damage_Coverage__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Property Damage Coverage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>