peac_dev/force-app/main/default/objects/Insurance__c/fields/Save_at_Account_Level__c.field-meta.xml
<CustomField>
    <fullName>Save_at_Account_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Save at Account Level</label>
    <type>Checkbox</type>
</CustomField>