peac_dev/force-app/main/default/objects/Insurance__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Yes or No</inlineHelpText>
    <label>Title</label>
    <type>Checkbox</type>
</CustomField>