peac_dev/force-app/main/default/objects/Insurance__c/fields/Titled_Vehicles__c.field-meta.xml
<CustomField>
    <fullName>Titled_Vehicles__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Titled Vehicles</label>
    <type>Checkbox</type>
</CustomField>