peac_dev/force-app/main/default/objects/Insurance__c/validationRules/Invalid_Save_At_account_Level.validationRule-meta.xml
<ValidationRule>
    <fullName>Invalid_Save_At_account_Level</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Save_at_Account_Level__c , Titled_Vehicles__c )</errorConditionFormula>
    <errorMessage>Titled Insurance cannot be saved at account level</errorMessage>
</ValidationRule>