peac_dev/force-app/main/default/objects/Insurance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Insurance_Agent__c</columns>
    <columns>Policy_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>