peac_dev/force-app/main/default/objects/Insurance__c/listViews/Insurance_Renewals.listView-meta.xml
<ListView>
    <fullName>Insurance_Renewals</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>Insurance_Agent__c</columns>
    <columns>Effective_Date__c</columns>
    <columns>Policy_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>NEXT_N_DAYS:30</value>
    </filters>
    <filters>
        <field>Expiration_Date__c</field>
        <operation>greaterThan</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Titled_Vehicles__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Insurance Renewals</label>
</ListView>